<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="اختر وجبك"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="3">


    <Button
        android:id="@+id/btn_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/fill_light_blue"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/breakfast"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/fill_light_blue"
        android:minHeight="40dp"
        android:text="@string/lunch"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_dinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:minHeight="40dp"
        android:background="@drawable/fill_light_blue"
        android:gravity="center"
        android:text="@string/dinner"
        android:textColor="@color/white" />
</LinearLayout>
</LinearLayout>